--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "26262a0d",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "6cf418fe",
    "metadata": {},
    "outputs": [
@@ -239,10 +239,12 @@
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
       "                             score_func=<function f_regression at 0x000001ABC5B41940>)),\n",
-      "                ('estimator', LinearRegression())]):\n",
-      "  MSE: 11.177256954645403\n",
-      "  MAE: 2.524517976430189\n",
-      "   R2: 0.8089190863428402\n"
+      "                ('estimator',\n",
+      "                 MLPRegressor(hidden_layer_sizes=(9,), learning_rate_init=0.01,\n",
+      "                              max_iter=30000))]):\n",
+      "  MSE: 8.447224954832725\n",
+      "  MAE: 2.150556945008059\n",
+      "   R2: 0.8555903770677691\n"
      ]
     }
    ],
