--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6f80aa58",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a55c67f0",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "26262a0d",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "defd4f48",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1e6e134a",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "6cf418fe",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
       "                                                  ['Origin'])])),\n",
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
-      "                             score_func=<function f_regression at 0x000001ABC5B41940>)),\n",
+      "                             score_func=<function f_regression at 0x000002BB43311DC0>)),\n",
       "                ('estimator',\n",
       "                 MLPRegressor(hidden_layer_sizes=(9,), learning_rate_init=0.01,\n",
       "                              max_iter=30000))]):\n",
