--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "6cdd5a74",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "6ff22002",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "dd799a44",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "293492d9",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "6021e0ac",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "f6d138b8",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "4df9c14c",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "4ad284e9",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "eff611e1",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "ba1ba32e",
    "metadata": {},
    "outputs": [
@@ -253,12 +253,10 @@
       "                ('selectkbest',\n",
       "                 SelectKBest(k=6,\n",
       "                             score_func=<function f_regression at 0x000002BB43311DC0>)),\n",
-      "                ('estimator',\n",
-      "                 MLPRegressor(hidden_layer_sizes=(9,), learning_rate_init=0.01,\n",
-      "                              max_iter=30000))]):\n",
-      "  MSE: 8.447224954832725\n",
-      "  MAE: 2.150556945008059\n",
-      "   R2: 0.8555903770677691\n"
+      "                ('estimator', LinearRegression())]):\n",
+      "  MSE: 11.177256954645403\n",
+      "  MAE: 2.524517976430189\n",
+      "   R2: 0.8089190863428402\n"
      ]
     }
    ],
