--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "6cdd5a74",
    "metadata": {},
    "outputs": [],
@@ -19,18 +19,17 @@
     "    y = dataset.pop(\"MPG\")\n",
     "    x = dataset.copy()\n",
     "\n",
-    "    return x, y\n",
-    "    "
+    "    return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "6ff22002",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
+    "\n",
     "def make_train_test_split(x, y):\n",
     "\n",
     "    from sklearn.model_selection import train_test_split\n",
@@ -46,12 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "dd799a44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
     "def make_pipeline(estimator):\n",
     "\n",
     "    from sklearn.compose import ColumnTransformer\n",
@@ -82,12 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "293492d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
     "def make_grid_search(estimator, param_grid, cv=5):\n",
     "\n",
     "    from sklearn.model_selection import GridSearchCV\n",
@@ -100,19 +97,20 @@
     "    )\n",
     "\n",
     "    return grid_search\n",
+    "  \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "6021e0ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "    \n",
-    "# %%\n",
-    "def save_estimator(estimator):\n",
+    " \n",
+    " def save_estimator(estimator):\n",
     "\n",
     "    import pickle\n",
     "\n",
@@ -122,13 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "f6d138b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# %%\n",
+    "        \n",
     "def load_estimator():\n",
     "\n",
     "    import os\n",
@@ -144,12 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "4df9c14c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
     "def train_linear_regression():\n",
     "\n",
     "    from sklearn.linear_model import LinearRegression\n",
@@ -200,12 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "4ad284e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
+    "  \n",
     "def eval_metrics(y_true, y_pred):\n",
     "\n",
     "    from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
@@ -220,24 +216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "eff611e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "   \n",
-    "# %%\n",
+    "  \n",
     "def report(estimator, mse, mae, r2):\n",
     "\n",
     "    print(estimator, \":\", sep=\"\")\n",
     "    print(f\"  MSE: {mse}\")\n",
     "    print(f\"  MAE: {mae}\")\n",
-    "    print(f\"   R2: {r2}\")\n"
+    "    print(f\"   R2: {r2}\") \n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "ba1ba32e",
    "metadata": {},
    "outputs": [
@@ -261,7 +258,7 @@
     }
    ],
    "source": [
-    "# %%\n",
+    "  \n",
     "def check_estimator():\n",
     "\n",
     "    import pickle\n",
@@ -286,8 +283,7 @@
     "    report(estimator.best_estimator_, mse, mae, r2)\n",
     "\n",
     "\n",
-    "check_estimator()\n",
-    "\n"
+    "check_estimator()\n"
    ]
   },
   {
